added connectivity to cw1

--- a/views/newpost.ejs
+++ b/views/newpost.ejs
@@ -16,9 +16,11 @@
       <input type="text" name="title" required />
     </label>
 
-    <label
-      >Country
-      <input type="text" name="country" required placeholder="e.g. Brazil" />
+    <label>
+      Country
+      <select name="country" id="countrySelect" required>
+        <option value="">Loading countries…</option>
+      </select>
     </label>
 
     <label
