--- a/views/search.ejs
+++ b/views/search.ejs
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <title>Travel Blog Search</title>
     <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="/css/search.css" />
   </head>
   <body>
     <!-- header -->
